--- a/Umbraco.Site/sass/rustikus/modules/custom/_fonts.scss
+++ b/Umbraco.Site/sass/rustikus/modules/custom/_fonts.scss
@@ -188,3 +188,12 @@
 .icon-quote-right:before {
   content: "\58";
 }
+.icon-rocket:before {
+  content: "\59";
+}
+.icon-dashboard-speed-streamline:before {
+  content: "\5a";
+}
+.icon-weight:before {
+  content: "\30";
+}
