--- a/Umbraco.Site/sass/rustikus/rustikus.scss
+++ b/Umbraco.Site/sass/rustikus/rustikus.scss
@@ -47,6 +47,7 @@
 @import "custom/_quotes.scss";
 @import "custom/_header.scss";
 @import "custom/_slider.scss";
+@import "custom/_fp-numbers.scss";
 
 
 /* PRINT STYLES */
