--- a/Umbraco.Site/Views/MacroPartials/FP - Quotes.cshtml
+++ b/Umbraco.Site/Views/MacroPartials/FP - Quotes.cshtml
@@ -11,7 +11,7 @@
     quoter = Model.MacroParameters[quoter].ToString();
 
 }
-<div class="fp-quotes">
+<div class="fp-quotes" id="numbers-trigger">
 	<h1 class="brand-info text-center"><i class="icon-quote-right"></i></h1>
 
     <h2 class="text-center quote">@quote</h2>
