--- a/Umbraco.Site/Views/MacroPartials/FP - numbers game.cshtml
+++ b/Umbraco.Site/Views/MacroPartials/FP - numbers game.cshtml
@@ -1,15 +1,31 @@
 ﻿@inherits Umbraco.Web.Macros.PartialViewMacroPage
 
 @{
-    var number = Model.MacroParameters["number"];
-    var text = Model.MacroParameters["text"];
-    var numberUnit = Model.MacroParameters["numberUnit"];
-    var icon = Model.MacroParameters["icon"];
-    var delay = Model.MacroParameters["delay"];
+	var number = Model.MacroParameters["number"];
+	var text = Model.MacroParameters["text"];
+	var numberUnit = Model.MacroParameters["numberUnit"];
+	var icon = Model.MacroParameters["icon"];
+	var delay = Model.MacroParameters["delay"];
+	var year = Model.MacroParameters["year"];
+	var isYear = ((string)Model.MacroParameters["year"] == "1" ? "isYear" : "notYear");
 }
 
 <div class="number-game">
-    @icon
-    <h1 class="numberr" id="numberr" data-number="@number" data-unit="@numberUnit">0</h1>
-    @text
+	<div class="contain-icon">
+		<i class="icon-@icon"></i>
+	</div>
+	
+	<div id="loading">
+		<div class="outer-shadow"></div>
+		<div class="inner-shadow"></div>
+		<div class="hold left">
+			<div class="fill"></div>
+		</div>
+		<div class="hold right">
+			<div class="fill"></div>
+		</div>
+	</div>
+
+	<h1 class="numberr" id="numberr" data-number="@number" data-unit="@numberUnit" data-isYear="@isYear">0</h1>
+	<label>@text</label>
 </div>
