--- a/Umbraco.Site/sass/rustikus/custom/_events-container.scss
+++ b/Umbraco.Site/sass/rustikus/custom/_events-container.scss
@@ -1,6 +1,7 @@
 // Frontpage events 
 .fp-upcoming-events {
 	> li {
+		overflow: hidden;
 		> a {
 			height: 290px;
 			width: 100%;
@@ -9,43 +10,11 @@
 			background-position: 50% 50%;
 			position: relative;
 			overflow: hidden;
-			.event-info {
-				background: rgba(black, 0.8);
-				position: absolute;
-				bottom: 0px;
-				left: 0%;
-				width: 100%;
-				max-height: 80px;
-				height: auto;
-				padding: 10px 15px;
-				z-index: map-get($zindex, default);
-				color: $primary-light;
-				@include transition(max-height 0.3s ease-in-out);
-				.name, .type {
-					color: #fff;
-					font-size: 18px;
-					padding-bottom: 4px;
-				}
-				.name {
-					width: 80%;
-				}
-				.type {
-					width: 20%;
-				}
-				.location {
-					width: 60%;
-				}
-				.date {
-					width: 40%;
-				}
-				.text {
-					width: 100%;
-					border-top: solid 1px rgba($white, 0.3);
-					display: block;
-					margin-top: 71px;
-					padding-top: 10px;
-				}
-			}
+			//-webkit-filter: brightness(100%);
+			-webkit-filter: saturate(.8);
+			//filter: brightness(100%);
+			filter: saturate(.8);
+			@include transition(all 0.3s ease-in-out);
 			.overlay {
 				opacity: 0;
 				z-index: map-get($zindex, behind);
@@ -57,15 +26,56 @@
 				top: 0;
 				@include transition(opacity 0.3s ease-in-out);
 			}
-			&:hover {
-				.overlay {
-					background-color: rgba(black, 0.3);
-					opacity: 1;
-					z-index: map-get($zindex, default);
-				}
-				.event-info {
-					max-height: 200px;
-				}
+		}
+		.event-info {
+			background: rgba(black, 0.8);
+			position: absolute;
+			bottom: 0px;
+			left: 0%;
+			width: 100%;
+			max-height: 80px;
+			height: auto;
+			padding: 10px 15px;
+			z-index: map-get($zindex, default);
+			color: $primary-light;
+			margin-left: 15px;
+			@include calc(width, "100% - 30px");
+			@include transition(max-height 0.3s ease-in-out);
+			.name, .type {
+				color: #fff;
+				font-size: 18px;
+				padding-bottom: 4px;
+			}
+			.name {
+				width: 80%;
+			}
+			.type {
+				width: 20%;
+			}
+			.location {
+				width: 60%;
+			}
+			.date {
+				width: 40%;
+			}
+			.text {
+				width: 100%;
+				border-top: solid 1px rgba($white, 0.3);
+				display: block;
+				margin-top: 71px;
+				padding-top: 10px;
+				color: white;
+			}
+		}
+		&:hover {
+			> a {
+				//-webkit-filter: brightness(50%);
+				-webkit-filter: saturate(1.5);
+				//filter: brightness(50%);
+				filter: saturate(1.5);
+			}
+			.event-info {
+				max-height: 200px;
 			}
 		}
 	}
