--- a/Umbraco.Site/sass/rustikus/modules/custom/_fonts.scss
+++ b/Umbraco.Site/sass/rustikus/modules/custom/_fonts.scss
@@ -197,3 +197,46 @@
 .icon-weight:before {
   content: "\30";
 }
+
+.icon-contact:before {
+  content: "\79";
+}
+.icon-doc:before {
+  content: "\7a";
+}
+.icon-earth:before {
+  content: "\41";
+}
+.icon-hi:before {
+  content: "\42";
+}
+.icon-home:before {
+  content: "\43";
+}
+.icon-lightbulb:before {
+  content: "\44";
+}
+.icon-player:before {
+  content: "\45";
+}
+.icon-puzzle:before {
+  content: "\46";
+}
+.icon-rugby:before {
+  content: "\47";
+}
+.icon-user:before {
+  content: "\48";
+}
+.icon-youtube:before {
+  content: "\31";
+}
+.icon-twitter:before {
+  content: "\32";
+}
+.icon-facebook:before {
+  content: "\33";
+}
+.icon-facebook-places:before {
+  content: "\34";
+}
