--- a/Umbraco.Site/sass/rustikus/modules/custom/_pretty-form.scss
+++ b/Umbraco.Site/sass/rustikus/modules/custom/_pretty-form.scss
@@ -215,7 +215,9 @@ form.pretty-lady {
 
 	&.success {
 
-		input[type="text"] {
+		input[type="text"], 
+		input[type="number"], 
+		input[type="email"],  {
 			border-color: $brand-success;
 		}
 		/* label {
