--- a/Umbraco.Site/Views/MacroPartials/Players.cshtml
+++ b/Umbraco.Site/Views/MacroPartials/Players.cshtml
@@ -1,3 +1,58 @@
 ﻿@inherits Umbraco.Web.Macros.PartialViewMacroPage
+@using System.Threading.Tasks;
+@using System.Threading;
+@using System.Globalization;
+@using Umbraco.Web
+@using System.Web.Mvc.Html
+@using System.Web.Mvc
 
-	<h1>players</h1>
+@{ 
+	var startNodeId = Model.MacroParameters["startNodeId"];
+	var eventNode = Umbraco.TypedContent(startNodeId);
+	var eventList = eventNode.Children.OrderBy(x => x.GetPropertyValue<DateTime>("date"));
+}
+@if (startNodeId != null)
+{
+	var startNode = Umbraco.Content(startNodeId);
+	var selection = startNode.Children.Where("Visible");
+
+	if (selection.Any())
+	{
+		<ul class="row players">
+			@foreach (var item in eventList.OrderBy(x => x.GetPropertyValue<DateTime>("date")).Take(4))
+			{
+				var name = item.Name;
+				if (name.Length > 35)
+				{
+					name = name.Substring(0, 35) + "...";
+				}
+				var imageId = item.GetPropertyValue("playerPhoto");
+				var image = ""; ;
+				if (item.HasValue("playerPhoto"))
+				{
+					image = Umbraco.TypedMedia(imageId).Url;
+				}
+				var eventType = item.GetPropertyValue("eventType");
+
+				string summary = item.GetPropertyValue("summary").ToString(); 
+				if (summary.Length > 130) {
+					summary = summary.Substring(0, 130) + "...";
+				}
+
+				<li class="col-md-3 col-sm-6 relative">
+					<a href="@item.Url">
+						<span class="image" style="background-image: url(@image?width=580&mode=crop&quality=80&format=jpg);"></span>
+						<div class="player-name">
+							<span class="name">@name</span>
+							<span class="nickname">@item.GetPropertyValue("nickname")</span>
+						</div>
+						<div class="player-info">
+							<p class="text">@summary</p>
+							<span href="@item.Url">Profile</span>
+						</div>
+					</a>
+				</li>
+			}
+		</ul>
+	}
+}
