--- a/Umbraco.Site/sass/rustikus/custom/_slider.scss
+++ b/Umbraco.Site/sass/rustikus/custom/_slider.scss
@@ -13,8 +13,10 @@
 		}
 		h1 {
 			color: $white;
-			text-align: center;
+			//text-align: center;
 			font-size: 60px;
+			margin: 0 auto;
+			max-width: 90%;
 			&:nth-child(2) {
 				font-size: 50px;
 			}
@@ -33,6 +35,38 @@
 			position: absolute;
 		}
 	}
+
+	// ANimated headline
+	.cd-headline {
+		&.rotate-1 {
+			.cd-words-wrapper {
+				display: inline-block;
+				perspective: 300px;
+			}
+
+			b {
+				opacity: 0;
+				transform-origin: 50% 100%;
+				transform: rotateX(180deg);
+				display: inline-block;
+				position: absolute;
+				left: 0;
+				top: 0;
+				&.is-visible {
+					position: relative;
+					opacity: 1;
+					transform: rotateX(0deg);
+					animation: cd-rotate-1-in 1.2s;
+
+				}
+				&.is-hidden {
+					transform: rotateX(180deg);
+					animation: cd-rotate-1-out 1.2s;
+				}
+			}
+		}
+	}
+
 	.carousel-indicators {
 		width: 12px;
 		left: auto;
@@ -170,5 +204,41 @@
 	}
 	.carousel-indicators {
 		bottom: 20px;
+	}
+}
+
+@keyframes cd-rotate-1-in {
+	0% {
+		transform: rotateX(180deg);
+		opacity: 0;
+	}
+	35% {
+		transform: rotateX(120deg);
+		opacity: 0;
+	}
+	65% {
+		opacity: 0;
+	}
+	100% {
+		transform: rotateX(360deg);
+		opacity: 1;
+	}
+}
+
+@keyframes cd-rotate-1-out {
+	0% {
+		transform: rotateX(0deg);
+		opacity: 1;
+	}
+	35% {
+		transform: rotateX(-40deg);
+		opacity: 1;
+	}
+	65% {
+		opacity: 0;
+	}
+	100% {
+		transform: rotateX(180deg);
+		opacity: 0;
 	}
 }
